--- a/App/src/app/auth/onboarding/onboarding.page.scss
+++ b/App/src/app/auth/onboarding/onboarding.page.scss
@@ -1,7 +1,11 @@
+swiper-container{
+    height: 100%;
+}
+
 .slider{
     img{
         width: 100vw;
-        height: 100vh;
+        height: 100%;
     }
     .bottom-right {
         position: absolute;
