--- a/App/src/app/auth/profile/profile.page.scss
+++ b/App/src/app/auth/profile/profile.page.scss
@@ -1,16 +1,34 @@
 
 .overlay-icon {
   position: absolute;
-  top: 72%;
-  left: 31%;
-  transform: translate(-50%, -50%);
+  top: 65%;
+  right: -15%;
+  transform: translate(-50%, -15%);
   font-size: 2rem;
+  padding: 0.25rem;
+  background: #fff;
+  border-radius: 50%;
+}
+.upper-overlay{
+  width: 100%;
+  height: 25%;
+  background-color: var(--ion-color-primary);
+  border-bottom-left-radius: 75% 100%;
+  border-bottom-right-radius: 75% 100%;
+  position: relative;
 }
 .margin-top {
-  margin-top: 11px;
+  margin-top: 6rem;
 }
 .margin-img {
-  margin-top: 6rem;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  img{
+    width: 170px;
+    height: 170px;
+    border-radius: 50%;
+  }
 }
 .edit-btn {
   width: 100%;
