--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -11,7 +11,7 @@
       <ion-grid>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item lines="none"  class="input">
                 <ion-label position="floating" labelPlacement="stacked">
                     {{'Name' | translate  }}
                 </ion-label>
@@ -24,7 +24,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item lines="none" class="input">
               <ion-label position="floating" labelPlacement="stacked"
                 > {{'age' | translate  }}</ion-label
               >
@@ -34,7 +34,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
+            <ion-item lines="none"  class="input">
               <ion-select
                 aria-label="Fruit"
                 interface="action-sheet"
@@ -50,7 +50,7 @@
         </ion-row>
         <ion-row *ngIf="isFemale" class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item class="input" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >Father/Husband</ion-label
               >
@@ -63,7 +63,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
+            <ion-item lines="none" class="input">
               <ion-label *ngIf="!f['donationDate'].value" position="floating" labelPlacement="stacked"
                 >{{'donationDate' | translate  }}</ion-label
               >
@@ -81,7 +81,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item lines="none" class="input">
               <ion-label position="floating" labelPlacement="stacked"
                 >{{'mobileNo' | translate  }}</ion-label
               >
@@ -94,7 +94,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
+            <ion-item lines="none" class="input">
               <ion-select
                 aria-label="Fruit"
                 interface="action-sheet"
@@ -110,12 +110,12 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item lines="none" class="input">
               <ion-label position="floating" labelPlacement="stacked"
                 >{{'hemoglobin' | translate  }}</ion-label
               >
               <ion-input
-                placeholder="hemoglobin"
+                placeholder="Hemoglobin"
                 formControlName="hemoglobin"
               ></ion-input>
             </ion-item>
@@ -125,7 +125,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
+            <ion-item lines="none" class="input">
               <ion-label position="floating" labelPlacement="stacked"
                 >{{'state' | translate  }}
               </ion-label>
@@ -170,7 +170,7 @@
         
         <ion-row *ngIf="isCity"  class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12" class="ion-justify-content-between">
-            <ion-item fill="outline">
+            <ion-item lines="none" class="input">
               <ion-label position="floating" labelPlacement="stacked">
                 {{'city' | translate  }}
               </ion-label>
