--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
@@ -21,6 +21,9 @@ ion-card {
   .name {
     font-weight: 800;
   }
+  .refresh-btn{
+    width: 36px;
+  }
   .btn-col {
     display: flex;
     align-items: end;
