--- a/App/src/app/layout/pages/home/home.page.html
+++ b/App/src/app/layout/pages/home/home.page.html
@@ -4,6 +4,9 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title class="ion-justify-content-center">Home</ion-title>
+    <ion-buttons class="color-light" slot="end" (click)="navigateTo('/layout/chat')">
+     Chat
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
